crates/eidas-verify/tests/snapshots/end_to_end_corpus__asic_multifiles_via_facade.snap
---
source: crates/eidas-verify/tests/end_to_end_corpus.rs
expression: projected_or_err(r)
---
ok:
  container_kind: Asic
  signatures:
    - diagnostic_codes:
        - CADES_VERIFICATION_ERROR
        - ASIC_SIGNATURE_BINDING
      level: Unknown
      qualification: NotAdES
      signer_present: false
      status: TotalFailedSub
