crates/eidas-verify/tests/snapshots/end_to_end_corpus__jades_b_full_type_via_facade.snap
---
source: crates/eidas-verify/tests/end_to_end_corpus.rs
expression: projected_or_err(r)
---
err_kind: Json
